--- a/templates/main.j2
+++ b/templates/main.j2
@@ -6,7 +6,7 @@
 <p></p>
 <div id="browseHome" align="center">
 <h2>
-<a href="index">Home</a>
+<a href="/">Home</a>
 <a href="pizzas">Pizzas</a> 
 <a href="employees">Employees</a> 
 <a href="customers">Customers</a> 
