Customers/Pizzas/Employees pages working

--- a/templates/customers.j2
+++ b/templates/customers.j2
@@ -6,7 +6,7 @@
 <body>
 <div id="browse">
 
-<a href="/">Home</a> | <a href="pizzas">Pizzas</a> | <a href="orders">Orders</a>
+<a href="/">Home</a> | <a href="pizzas">Pizzas</a> | <a href="orders">Orders</a> | <a href="employees">Employees</a>
 <p></p> 
 
 <h1>Customers</h1>
