--- a/templates/employees.j2
+++ b/templates/employees.j2
@@ -6,7 +6,7 @@
 <body>
 <div id="browse">
 
-<a href="/">Home</a> | <a href="customers">Customer</a> | <a href="orders">Orders</a> | <a href="pizzas">Pizzas</a>
+<a href="/">Home</a> | <a href="customers">Customers</a> | <a href="orders">Orders</a> | <a href="pizzas">Pizzas</a>
 <p></p> 
 
 <h1>Employees</h1>
