Got Orders > order_total to update when order is inserted/updated.

--- a/templates/customers.j2
+++ b/templates/customers.j2
@@ -1,3 +1,8 @@
+<!-- Citation for this file: -->
+<!-- Date: 06/04/2022 -->
+<!-- Adapted from osu-cs340-ecampus/flask-starter-app -->
+<!-- Source URL: https://github.com/osu-cs340-ecampus/flask-starter-app -->
+
 <head>
     <title>Customers</title>
     <!-- Add link to css here --> 
@@ -6,7 +11,7 @@
 <body>
 <div id="browse">
 
-<a href="/">Home</a> | <a href="pizzas">Pizzas</a> | <a href="orders">Orders</a> | <a href="employees">Employees</a>
+<a href="/">Home</a> | <a href="pizzas">Pizzas</a> | <a href="customers">Customers</a> | <a href="orders">Orders</a> | <a href="employees">Employees</a>
 <p></p> 
 
 <h1>Customers</h1>
@@ -89,7 +94,7 @@
         <label> customer_phone </label> <input type="text" id="cphone" name="cphone" placeholder="" required>
     </fieldset>
         <input class="btn" type="submit" name="addCustomer" id="addCustomer" value="Add Customer">
-        <input class="btn" type="button" value="Cancel" onClick=""> <!-- need to put a function here to return to browse -->
+        <a href="customers"><input class="btn" type="button" value="Cancel"> </a>
     </form>
     </div>
 
@@ -105,7 +110,7 @@
             </select>
     </fieldset>
         <input class="btn" type="submit" id="deleteCustomer" name="deleteCustomer" value="Delete Customer">
-        <input class="btn" type="button" value="Cancel" onClick=""> <!-- need to put a function here to return to browse -->
+        <a href="customers"><input class="btn" type="button" value="Cancel"> </a>
     </form>
     </div>
 
@@ -125,7 +130,7 @@
         <label> customer_phone </label> <input type="text" name="cphone" placeholder="" required>
     </fieldset>
         <input class="btn" type="submit" id="updateCustomer" name="updateCustomer" value="Update Customer">
-        <input class="btn" type="button" value="Cancel" onClick=""> <!-- need to put a function here to return to browse -->
+        <a href="customers"><input class="btn" type="button" value="Cancel"> </a>
     </form>
     </div>
 
