--- a/templates/pizzas.j2
+++ b/templates/pizzas.j2
@@ -1,12 +1,15 @@
+<!-- Citation for this file: -->
+<!-- Date: 06/04/2022 -->
+<!-- Adapted from osu-cs340-ecampus/flask-starter-app -->
+<!-- Source URL: https://github.com/osu-cs340-ecampus/flask-starter-app -->
+
 <head>
     <title>Pizzas</title>
-    <!-- Add link to css here --> 
-    <!-- Add script language -->
 </head>
 <body>
 <div id="browse">
 <!-- Links to other routes -->
-<a href="/">Home</a> | <a href="customers">Customers</a> | <a href="orders">Orders</a> | <a href="employees">Employees</a>
+<a href="/">Home</a> | <a href="pizzas">Pizzas</a> | <a href="customers">Customers</a> | <a href="orders">Orders</a> | <a href="employees">Employees</a>
 <p></p> 
 
 <h1>Pizzas</h1>
@@ -50,10 +53,10 @@
     <legend><strong>Add Pizza</strong></legend>
     <fieldset class="field">
         <label> pizza_type </label> <input type="text" class="form-control" id="ptype" name="ptype" placeholder="" required>
-        <label> pizza_price </label> <input type="text" class="form-control" id="pprice" name="pprice" pattern="[0-9]{1,}" placeholder="" required>
+        <label> pizza_price </label> <input type="number" class="form-control" id="pprice" name="pprice" step="0.01" min="0" required>
     </fieldset>
         <input class="btn" type="submit" name="addPizza" id="addPizza" value="Add Pizza">
-        <input class="btn" type="button" value="Cancel" onClick=""> <!-- need to put a function here to return to browse -->
+        <a href="pizzas"><input class="btn" type="button" value="Cancel"> </a>
     </form>
     </div>
 
@@ -63,15 +66,15 @@
     <fieldset class="field">
         <label> pizza_id </label> 
             <select id="pid" name="pid"> <!-- for-loop to iterate and show only pizza_id on drop down menu -->
-            {% for pizza in Pizzas %}
-            <option value={{pizza['pizza_id']}} selected> {{pizza['pizza_id']}} </option>
+            {% for id in all_pizzas_id %}
+            <option value={{id['pizza_id']}} selected> {{id['pizza_id']}} </option>
             {% endfor %} 
         </select>
         <label> pizza_type </label> <input type="text" class="form-control" id="ptype" name="ptype" placeholder="" required>
-        <label> pizza_price </label> <input type="text" class="form-control" id="pprice" name="pprice" pattern="[0-9]{1,}" placeholder="" required>
+        <label> pizza_price </label> <input type="number" class="form-control" id="pprice" name="pprice" step="0.01" min="0" required>
     </fieldset>
         <input class="btn" type="submit" id="updatePizza" name="updatePizza" value="Update Pizza">
-        <input class="btn" type="button" value="Cancel" onClick=""> <!-- need to put a function here to return to browse -->
+        <a href="pizzas"><input class="btn" type="button" value="Cancel"> </a>
     </form>
     </div>
 
